--- a/index.html
+++ b/index.html
@@ -3,44 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
-    <title>Bram</title>
+    <title>Miquel P.M</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/master.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <div class="SocialButtons">
-      <nav class="media">
-        <a class="NavMedia" href="https://github.com/miquelpuertomartinez"><img class="ImgMedia" src="images/logoGit.png" ></a></li>
-        <a class="NavMedia" href="https://www.linkedin.com/in/miquel-puerto-mart%C3%ADnez-b8a38b166/"><img class="ImgMedia" src="images/logoLinkedin.jpg" ></a></li>
-        <a class="NavMedia" href=""><img class="ImgMedia" src="images/logoMail.png" ></a></li>
-      </nav>
-    </div>
-    <div class="structure">
-      <div class="header">
-        <div class="title">
-          <img class="logo" src="images/logo.png">
-        </div>
-        <div class="menu">
-          <nav>
-          <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Docs</a></li>
-          </ul>
-        </nav>
-        </div>
-      </div>
+    <header>Miquel <span class="Btittle">Puerto Martínez</span></header>
+    <h1>Telematics Engineer</h1>
 
-      <section class="home">
-        <div class="container">
-          <h1 class="frase">Frase que inspiri confiança
-            <span>creativitat i dinamisme</span>
-          </h1>
-        <a href="" class="button buttonImpact">Botonet projectes</a>
-        </div> 
-      </section>
-    </div>
-    <img class="buttonContact" src="images/logoMail.png">
-    <div class="footer">Copyright &copy;2013</div>
+    <section><img class="HomeImage" src="images/sol.png"></section>
+    
+    <footer>
+      <p> <a class="fa fa-google"></a> <a href="mailto:miquelpm18@gmail.com" style="color: white;text-decoration: none;">miquelpm18@gmail.com</a> <a>|</a>
+          <a class="fa fa-github"></a> <a href="https://github.com/miquelpuertomartinez" style="color: white;text-decoration: none;">miquelpuertomartinez</a> <a>|</a>
+          <a class="fa fa-linkedin"></a> <a href="https://www.linkedin.com/in/miquel-puerto-mart%C3%ADnez-b8a38b166/" style="color: white;text-decoration: none;">Miquel Puerto Martínez</a>
+        </p>
+    </footer> 
+
   </body>
 </html>
