Sol name correction in Index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>Miquel <span class="Btittle">Puerto Martínez</span></header>
     <h1>Telematics Engineer</h1>
 
-    <section><img class="HomeImage" src="images/sol.png"></section>
+    <section><img class="HomeImage" src="images/Sol.png"></section>
     
     <footer>
       <p> <a class="fa fa-google"></a> <a href="mailto:miquelpm18@gmail.com" style="color: white;text-decoration: none;">miquelpm18@gmail.com</a> <a>|</a>
